--- a/MariaFedele/MariaFedele.csproj
+++ b/MariaFedele/MariaFedele.csproj
@@ -54,11 +54,11 @@
     <Compile Include="Mesa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests.cs">
+    <Compile Include="New_Reserva.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Tests.Designer.cs">
-      <DependentUpon>Tests.cs</DependentUpon>
+    <Compile Include="New_Reserva.Designer.cs">
+      <DependentUpon>New_Reserva.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Menu_Principal.resx">
       <DependentUpon>Menu_Principal.cs</DependentUpon>
@@ -72,8 +72,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Tests.resx">
-      <DependentUpon>Tests.cs</DependentUpon>
+    <EmbeddedResource Include="New_Reserva.resx">
+      <DependentUpon>New_Reserva.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -93,6 +93,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="MesaCuad.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="MesaCuadradaV2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
