--- a/MariaFedele/MariaFedele.csproj
+++ b/MariaFedele/MariaFedele.csproj
@@ -52,6 +52,7 @@
       <DependentUpon>Menu_Principal.cs</DependentUpon>
     </Compile>
     <Compile Include="Mesa.cs" />
+    <Compile Include="Mesa_Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="New_Reserva.cs">
@@ -59,6 +60,12 @@
     </Compile>
     <Compile Include="New_Reserva.Designer.cs">
       <DependentUpon>New_Reserva.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reservas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reservas.Designer.cs">
+      <DependentUpon>Reservas.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Menu_Principal.resx">
       <DependentUpon>Menu_Principal.cs</DependentUpon>
@@ -75,6 +82,10 @@
     <EmbeddedResource Include="New_Reserva.resx">
       <DependentUpon>New_Reserva.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reservas.resx">
+      <DependentUpon>Reservas.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="Properties\DataSources\Reserva.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
